# thruline

./: Cargo.toml  LICENSE  README.md
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  release.yml
docs/: LANGUAGE.md
docs/superpowers/plans/: 2026-05-30-pre-launch-hardening.md  2026-05-30-thruline.md  2026-05-31-ecosystem.md  2026-05-31-editor-tooling.md  2026-05-31-language-evolution.md  2026-05-31-runtime-hardening.md  2026-06-02-tui-and-graph.md
docs/superpowers/specs/: 2026-05-30-thruline-design.md  2026-06-02-tui-design.md
editors/: thruline.tmLanguage.json
editors/vscode/: package.json
examples/code-review/: README.md  review.line
examples/code-review/prompts/: review-task.md  reviewer.md
examples/doc_gen/: README.md  doc.line
examples/multi_reviewer/: README.md  review.line
examples/pr_triage/: README.md  triage.line
examples/sentiment/: README.md  pipeline.line
examples/sentiment/prompts/: analyst.md  writer.md
skill/: create-thruline.md  thruline.md
src/: ast.rs  cli.rs  events.rs  lib.rs  main.rs  serve.rs  serve_index.html  validator.rs
src/driver/: api.rs  bedrock.rs  mock.rs  mod.rs  ollama.rs  openai.rs  stdio.rs  vertex.rs
src/lsp/: mod.rs
src/parser/: grammar.pest  mod.rs
src/runtime/: artifact.rs  mod.rs  scheduler.rs  state.rs
src/tui/: app.rs  mod.rs  runner.rs  ui.rs  visualizer.rs
tests/: integration.rs  lib_usage.rs
