[package]
name = "thruline"
version = "0.1.1"
edition = "2021"
description = "Minimal DSL and runtime for deterministic multiagent pipelines"
license = "MIT"
repository = "https://github.com/pufferhaus/thruline"
homepage = "https://thruline.work"
keywords = ["ai", "llm", "agents", "pipeline", "workflow"]
categories = ["command-line-utilities"]

[[bin]]
name = "thruline"
path = "src/main.rs"

[dependencies]
pest = "2"
pest_derive = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
