[package]
name = "thruline"
version = "0.2.2"
edition = "2021"
description = "Deterministic agent pipelines"
license = "MIT"
repository = "https://github.com/dove-tools/thruline"
homepage = "https://thruline.work"
keywords = ["ai", "llm", "agents", "pipeline", "workflow"]
categories = ["command-line-utilities"]

[lib]
name = "thruline"
path = "src/lib.rs"

[[bin]]
name = "thruline"
path = "src/main.rs"

[dependencies]
pest = "2"
pest_derive = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
tower-lsp = "0.20"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
aws-config = { version = "1.8.17", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1.132.0"

[dev-dependencies]
tempfile = "3"
